fixed z-index

--- a/public/css/mira-snackbar-public.css
+++ b/public/css/mira-snackbar-public.css
@@ -40,6 +40,7 @@
 
 .mira-snackbar-list--sticky {
   position: sticky;
+  z-index: 10000;
 }
 
 .mira-snackbar-list--fixed.mira-snackbar-list--left {
